# brimble-test

./: README.md  docker-compose.yml  start.sh
brimble-backend/: .gitignore  Dockerfile  brimble.db  entrypoint.sh  go.mod  main.go
brimble-backend/apps/my-app-1777234735350/node/: package.json
brimble-backend/apps/my-app-1777234947138/rust-ms/: main.rs
brimble-backend/apps/my-app-1777241079538/rust-ms/: Cargo.toml  Dockerfile
brimble-backend/apps/my-app-1777295606697/go-ms/: main.go
brimble-backend/apps/my-app-1777295642348/go-ms/: Dockerfile.ic  go.mod
brimble-backend/config/: config.go
brimble-backend/db/: db.go
brimble-backend/deployment/: delete-deployment.go  deployment.d.go  deployment.go  get-deployment.go  initiate-deployment.go  pipeline.go  redeploy.go
brimble-backend/utils/: utils.go
brimble-frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
brimble-frontend/src/: index.css  main.tsx
brimble-frontend/src/components/: DeploymentDetailModal.tsx  DeploymentForm.tsx  DeploymentList.tsx  LogViewer.tsx  Modal.tsx  NewDeploymentModal.tsx  RedeployMenu.tsx  StatusBadge.tsx
brimble-frontend/src/lib/: api.ts  deploymentStream.ts  env.ts  format.ts  pendingDeployments.ts  queries.ts  types.ts
brimble-frontend/src/mocks/: index.ts  log-scripts.ts  server.ts  store.ts
brimble-frontend/src/routes/: __root.tsx  index.tsx
defaults/: caddy.json
defaults/caddy/: Caddyfile
defaults/caddy/sites/: localhost.caddy
