[package]
name = "infracon_app"
version = "0.1.0"
edition = "2021"
authors = ["Anu <anu@example.com>"]
description = "Sample Rust web service for testing builds"
license = "MIT"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true